--- a/index.html
+++ b/index.html
@@ -1,4 +1,7 @@
 <html>
     <p> pragati baderiya <p>
         <br> this is my new html <br>
-        
+        <p>
+        end of beginning is my new fav song
+        <p>  // new feature is added //
+
